--- a/src/integrated-resource/expenses.yaml
+++ b/src/integrated-resource/expenses.yaml
@@ -66,7 +66,7 @@ Resources:
                   "Item": {
                     "type": {"S": "e"},
                     "epoch": {"N": "$currentEpochTime"},
-                    "expenses": {"S": "$input.path('$.expenses')"}
+                    "expenses": {"S": "$util.urlDecode($input.path('$.expenses'))"}
                   }
                 }
               - TableName: !Ref TableName
@@ -125,11 +125,11 @@ Resources:
                   "TableName": "${TableName}",
                   "Key": {
                       "type": {"S": "e"},
-                      "epoch": {"N": "$input.params('epoch')"}
+                      "epoch": {"N": "$util.urlDecode($input.params('epoch'))"}
                   },
                   "UpdateExpression": "SET expenses = :expenses",
                   "ExpressionAttributeValues": {
-                    ":expenses": {"S": "$input.path('$.expenses')"}
+                    ":expenses": {"S": "$util.urlDecode($input.path('$.expenses'))"}
                   }
                 }
               - TableName: !Ref TableName
@@ -188,7 +188,7 @@ Resources:
                   "TableName": "${TableName}",
                   "Key": {
                       "type": {"S": "e"},
-                      "epoch": {"N": "$input.params('epoch')"}
+                      "epoch": {"N": "$util.urlDecode($input.params('epoch'))"}
                   }
                 }
               - TableName: !Ref TableName
@@ -233,7 +233,7 @@ Resources:
       AuthorizerId: !Ref InteCognitoAuthorizer
       RequestParameters:
         method.request.path.epoch: true
-        method.request.path.end-time: true
+        method.request.path.end-date: true
       Integration:
         Type: AWS
         Credentials: !Ref APIGatewayIntegreatedRoleArn
@@ -242,20 +242,20 @@ Resources:
         PassthroughBehavior: WHEN_NO_TEMPLATES
         RequestParameters:
           integration.request.path.epoch: method.request.path.epoch
-          integration.request.path.end-time: method.request.path.end-time
+          integration.request.path.end-date: method.request.path.end-date
         RequestTemplates:
           application/json:
             "Fn::Sub":
               - |
                 {
-                    "TableName": "${TableName}",
-                    "KeyConditionExpression": "#type_alias=:v1 AND epoch BETWEEN :startTime AND :endTime",
-                    "ExpressionAttributeValues": {
-                        ":v1": {"S": "e"},
-                        ":startTime": {"N": "$input.params('epoch')"},
-                        ":endTime": {"N": "$input.params('end-time')"}
-                    },
-                    "ExpressionAttributeNames": {"#type_alias": "type"}
+                  "TableName":"${TableName}",
+                  "KeyConditionExpression":"#type_alias=:v1 AND epoch BETWEEN :startTime AND :endTime",
+                  "ExpressionAttributeValues": {
+                    ":v1":{"S":"e"},
+                    ":startTime":{"N":"$util.urlDecode($input.params('epoch'))"},
+                    ":endTime":{"N":"$util.urlDecode($input.params('end-date'))"}
+                  },
+                  "ExpressionAttributeNames":{"#type_alias":"type"}
                 }
               - TableName: !Ref TableName
         IntegrationResponses:
