--- a/src/lambda-functions/auth/auth.yaml
+++ b/src/lambda-functions/auth/auth.yaml
@@ -14,7 +14,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: ./authorizer
-      Handler: app.handler
+      Handler: app.lambda_handler
       Runtime: python3.8
 
 Outputs:
