--- a/src/integrated-resource/appointment.yaml
+++ b/src/integrated-resource/appointment.yaml
@@ -13,7 +13,9 @@ Parameters:
     Type: String
   Api:
     Type: String
-  InteCognitoAuthorizer:
+  # InteCognitoAuthorizer:
+  #   Type: String
+  LambdaAuthorizer:
     Type: String
   ApiRootResourceId:
     Type: String
@@ -48,8 +50,8 @@ Resources:
       RestApiId: !Ref Api
       ResourceId: !Ref AppointmentResource
       HttpMethod: POST
-      AuthorizationType: COGNITO_USER_POOLS
-      AuthorizerId: !Ref InteCognitoAuthorizer
+      AuthorizationType: CUSTOM
+      AuthorizerId: !Ref LambdaAuthorizer
       Integration:
         Type: AWS
         Credentials: !Ref APIGatewayIntegreatedRoleArn
@@ -125,8 +127,8 @@ Resources:
       RestApiId: !Ref Api
       ResourceId: !Ref EndTimeResource
       HttpMethod: GET
-      AuthorizationType: COGNITO_USER_POOLS
-      AuthorizerId: !Ref InteCognitoAuthorizer
+      AuthorizationType: CUSTOM
+      AuthorizerId: !Ref LambdaAuthorizer
       RequestParameters:
         method.request.path.start-time: true
         method.request.path.end-time: true
@@ -180,8 +182,8 @@ Resources:
       RestApiId: !Ref Api
       ResourceId: !Ref StartTimeResource
       HttpMethod: PUT
-      AuthorizationType: COGNITO_USER_POOLS
-      AuthorizerId: !Ref InteCognitoAuthorizer
+      AuthorizationType: CUSTOM
+      AuthorizerId: !Ref LambdaAuthorizer
       RequestParameters:
         method.request.path.start-time: true
       Integration:
@@ -327,8 +329,8 @@ Resources:
       RestApiId: !Ref Api
       ResourceId: !Ref EndTimeResource
       HttpMethod: DELETE
-      AuthorizationType: COGNITO_USER_POOLS
-      AuthorizerId: !Ref InteCognitoAuthorizer
+      AuthorizationType: CUSTOM
+      AuthorizerId: !Ref LambdaAuthorizer
       RequestParameters:
         method.request.path.start-time: true
         method.request.path.end-time: true
@@ -387,99 +389,3 @@ Resources:
         - StatusCode: "500"
           ResponseModels:
             application/json: "Error"
-
-  # WaittingRoomMethodGet:
-  #   Type: "AWS::ApiGateway::Method"
-  #   Properties:
-  #     RestApiId: !Ref Api
-  #     ResourceId: !Ref EndTimeResource
-  #     HttpMethod: GET
-  #     AuthorizationType: COGNITO_USER_POOLS
-  #     AuthorizerId: !Ref InteCognitoAuthorizer
-  #     RequestParameters:
-  #       method.request.path.start-time: true
-  #       method.request.path.end-time: true
-  #     Integration:
-  #       Type: AWS
-  #       Credentials: !Ref APIGatewayIntegreatedRoleArn
-  #       IntegrationHttpMethod: POST
-  #       Uri: !Sub "arn:aws:apigateway:${AWS::Region}:dynamodb:action/Query"
-  #       PassthroughBehavior: WHEN_NO_TEMPLATES
-  #       RequestParameters:
-  #         integration.request.path.start-time: method.request.path.start-time
-  #         integration.request.path.end-time: method.request.path.end-time
-  #       RequestTemplates:
-  #         application/json:
-  #           "Fn::Sub": '{"TableName":"${TableName}","KeyConditionExpression":"#type_alias=:v1 AND epoch BETWEEN :startTime AND :endTime","ExpressionAttributeValues":{":v1":{"S":"a"},":startTime":{"N":"$util.urlDecode($input.params(''start-time''))"},":endTime":{"N":"$util.urlDecode($input.params(''end-time''))"}},"ExpressionAttributeNames":{"#type_alias":"type"}}'
-  #       IntegrationResponses:
-  #         - StatusCode: "200"
-  #           ResponseTemplates:
-  #             application/json: |
-  #               #set($inputRoot = $input.path('$'))
-  #               {
-  #                 "appointment": [
-  #                   #foreach($field in $inputRoot.Items)
-  #                     {
-  #                       "type": "$field.type.S",
-  #                       "epoch": "$field.epoch.N",
-  #                       "info": "$field.info.S"
-  #                     }
-  #                     #if($foreach.hasNext),#end
-  #                   #end
-  #                 ]
-  #               }
-  #         - StatusCode: "400"
-  #           SelectionPattern: '4\d{2}'
-  #           ResponseTemplates:
-  #             application/json: '{"error":"Bad request"}'
-  #         - StatusCode: "500"
-  #           SelectionPattern: '5\d{2}'
-  #           ResponseTemplates:
-  #             application/json: '{"error":"Internal server error"}'
-  #     MethodResponses:
-  #       - StatusCode: "200"
-  #       - StatusCode: "400"
-  #         ResponseModels:
-  #           application/json: "Error"
-  #       - StatusCode: "500"
-  #         ResponseModels:
-  #           application/json: "Error"
-
-  # MusicMethodPost:
-  #   Type: "AWS::ApiGateway::Method"
-  #   Properties:
-  #     RestApiId: !Ref Api
-  #     ResourceId: !Ref MusicResource
-  #     HttpMethod: POST
-  #     ApiKeyRequired: true
-  #     AuthorizationType: NONE
-  #     Integration:
-  #       Type: AWS
-  #       Credentials: !GetAtt APIGatewayRole.Arn
-  #       # Should always be POST when integrating with AWS services
-  #       IntegrationHttpMethod: POST
-  #       # More info: https://docs.aws.amazon.com/apigateway/api-reference/resource/integration/
-  #       Uri: !Sub "arn:aws:apigateway:${AWS::Region}:dynamodb:action/PutItem"
-  #       PassthroughBehavior: WHEN_NO_TEMPLATES
-  #       RequestTemplates:
-  #         # Build the structure of the request that is sent when calling DynamoDB PutItem
-  #         # Using single-line, stringified JSON as the mapping template
-  #         # Example body when making API request: {"artist": "The Beatles", "album": "Abbey Road"}
-  #         # Use the unique id of the API context variable (eg: $context.requestId) as the DynamoDB item id
-  #         application/json:
-  #           {
-  #             "Fn::Sub": '{"TableName":"${TableName}","Item":{"id":{"S":"$context.requestId"},"artist":{"S":"$input.path(''$.artist'')"},"album":{"S":"$input.path(''$.album'')"}}}',
-  #           }
-  #       IntegrationResponses:
-  #         - StatusCode: "200"
-  #           ResponseTemplates:
-  #             application/json: "{}"
-  #     MethodResponses:
-  #       - StatusCode: "200"
-  # MusicArtistResource:
-  #   Type: "AWS::ApiGateway::Resource"
-  #   Properties:
-  #     RestApiId: !Ref Api
-  #     ParentId: !Ref MusicResource
-  #     PathPart: "{artist}"
-
