--- a/src/lambda-functions/treatment-course/treatment-course.yaml
+++ b/src/lambda-functions/treatment-course/treatment-course.yaml
@@ -20,6 +20,8 @@ Parameters:
   PyMySQLLayerArn:
     Description: ARN of the Lambda layer to associate with our function
     Type: String
+  LambdaAuthorizerFunctionArn:
+    Type: String
 
 Resources:
   MyApi:
@@ -28,10 +30,10 @@ Resources:
       StageName: !Ref StageName
       Name: !Sub "${StageName}-${AppName}-treatment-course-api"
       Auth:
-        DefaultAuthorizer: MyCognitoAuthorizer
+        DefaultAuthorizer: LambdaAuthorizer
         Authorizers:
-          MyCognitoAuthorizer:
-            UserPoolArn: !Ref UserPoolArn
+          LambdaAuthorizer:
+            FunctionArn: !Ref LambdaAuthorizerFunctionArn
 
   CreateATCFunction:
     Type: AWS::Serverless::Function
