--- a/src/integrated-resource/appointment.yaml
+++ b/src/integrated-resource/appointment.yaml
@@ -81,6 +81,7 @@ Resources:
                         "phone_number": {"S": "$input.path('$.appointment.phone_number')"},
                         "procedure_id": {"S": "$input.path('$.appointment.procedure_id')"},
                         "procedure_name": {"S": "$input.path('$.appointment.procedure_name')"},
+                        "reason": {"S": "$input.path('$.appointment.reason')"},
                         "doctor": {"S": "$input.path('$.appointment.doctor')"},
                         "time": {"N": "$input.path('$.appointment.time')"},
                         "status": {"N": "$input.path('$.appointment.status')"},
@@ -224,6 +225,7 @@ Resources:
                               "phone_number": {"S": "$input.path('$.appointment.phone_number')"},
                               "procedure_id": {"S": "$input.path('$.appointment.procedure_id')"},
                               "procedure_name": {"S": "$input.path('$.appointment.procedure_name')"},
+                              "reason": {"S": "$input.path('$.appointment.reason')"},
                               "doctor": {"S": "$input.path('$.appointment.doctor')"},
                               "time": {"N": "$input.path('$.appointment.time')"},
                               "status": {"N": "$input.path('$.appointment.status')"},
@@ -257,6 +259,7 @@ Resources:
                               "phone_number": {"S": "$input.path('$.appointment.phone_number')"},
                               "procedure_id": {"S": "$input.path('$.appointment.procedure_id')"},
                               "procedure_name": {"S": "$input.path('$.appointment.procedure_name')"},
+                              "reason": {"S": "$input.path('$.appointment.reason')"},
                               "doctor": {"S": "$input.path('$.appointment.doctor')"},
                               "time": {"N": "$input.path('$.appointment.time')"},
                               "status": {"N": "$input.path('$.appointment.status')"},
